--- a/.gitpod.yml
+++ b/.gitpod.yml
@@ -4,6 +4,10 @@
 
 image: gitpod/workspace-python-3.10
 tasks:
-  - init: pip install -r requirements.txt
-
-
+  - name: Dependencies
+    init: |
+      pip install --upgrade pip
+      pip install -r requirements.txt
+  - name: Pre-commit
+    init: pip install pre-commit
+    command: pre-commit install --hook-type pre-commit
