--- a/.gitpod.yml
+++ b/.gitpod.yml
@@ -7,7 +7,7 @@ tasks:
   - name: Dependencies
     init: |
       pip install --upgrade pip
-      pip install -r requirements.txt
+      pip install -r advent_2022/requirements.txt
   - name: Pre-commit
     init: pip install pre-commit
     command: pre-commit install --hook-type pre-commit
