--- a/.gitpod.yml
+++ b/.gitpod.yml
@@ -8,6 +8,5 @@ tasks:
     init: |
       pip install --upgrade pip
       pip install -r requirements.txt
-  - name: Pre-commit
-    init: pip install pre-commit
-    command: pre-commit install --hook-type pre-commit
+      pip install pre-commit
+      pre-commit install --hook-type pre-commit
