--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -2,79 +2,32 @@
 # See https://pre-commit.com/hooks.html for more hooks
 default_stages: [commit]
 default_language_version:
-  python: python3.10
-exclude: "[a-zA-Z]*/(migrations)/(.)*"
+  python: python3.12
+exclude: "template/*"
 repos:
 - repo: https://github.com/pre-commit/pre-commit-hooks
-  rev: "v4.3.0"
+  rev: v4.3.0
   hooks:
   - id: trailing-whitespace
     exclude: "(.bumpversion.cfg)"
   - id: end-of-file-fixer
-  - id: requirements-txt-fixer
-  - id: mixed-line-ending
-  - id: check-ast
-  - id: check-yaml
+    exclude: ".bumpversion.cfg"
   - id: check-added-large-files
-  - id: name-tests-test
-    exclude: ".*/factories.py"
-- repo: https://github.com/psf/black
-  rev: "22.3.0"
+  - id: requirements-txt-fixer
+- repo: https://github.com/abravalheri/validate-pyproject
+  rev: "v0.15"
   hooks:
-  -   id: black
-- repo: https://github.com/myint/docformatter
-  rev: "v1.4"
+    - id: validate-pyproject
+- repo: https://github.com/asottile/pyupgrade
+  rev: v3.17.0
   hooks:
-  -   id: docformatter
-      args:
-        - --in-place
-        - --pre-summary-newline
-        - --blank
-        - --make-summary-multi-line
-        - --wrap-summaries=80
-        - --wrap-descriptions=80
-- repo: https://github.com/PyCQA/pydocstyle
-  rev: "6.1.1"
+  - id: pyupgrade
+- repo: https://github.com/astral-sh/ruff-pre-commit
+  # Ruff version. Keep this in sync with the venv installed version
+  rev: v0.6.2
   hooks:
-  -   id: pydocstyle
-      exclude: "([a-zA-Z]*/tests/(.)*)|(__init__.py)"
-      args:
-        - --config=pydocstyle.ini
-- repo: https://github.com/PyCQA/flake8
-  rev: "4.0.1"
-  hooks:
-  -   id: flake8
-      args:
-        - --config=flake8.conf
-      additional_dependencies:
-        - flake8-black>=0.1.1
-- repo: https://github.com/ikamensh/flynt/
-  rev: "0.76"
-  hooks:
-  -   id: flynt
-- repo: https://github.com/PyCQA/bandit
-  rev: "1.7.4"
-  hooks:
-  -   id: bandit
-      args:
-      - "--configfile=bandit.yaml"
-      exclude: ".*/tests/.*"
-
-# Use the local installed version of pylint
-# so it has access to all the installed dependancies
-- repo: local
-  hooks:
-  - id: pylint
-    name: pylint
-    entry: pylint
-    language: system
-    types: [python]
-    require_serial: true
-  - id: mypy
-    name: mypy
-    entry: mypy
-    language: system
-    types: [python]
-    require_serial: true
-    args: ["--config=mypy.ini"]
-    exclude: "[a-zA-Z]*/(tests|migrations)/(.)*"
+    # Run the linter.
+    - id: ruff
+      args: [ --fix ]
+    # Run the formatter.
+    - id: ruff-format
