--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -3,7 +3,7 @@
 default_stages: [pre-commit]
 default_language_version:
   python: python3.12
-exclude: "template/.*"
+exclude: "templates/.*"
 repos:
 - repo: https://github.com/pre-commit/pre-commit-hooks
   rev: v4.3.0
