--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -5,9 +5,32 @@
 # Container Scanning customization: https://docs.gitlab.com/ee/user/application_security/container_scanning/#customizing-the-container-scanning-settings
 # Note that environment variables can be set in several places
 # See https://docs.gitlab.com/ee/ci/variables/#cicd-variable-precedence
+
+image: python:3.12
+variables:
+  UV_INSTALL_VERSION: "0.5.5"
+  UV_CACHE_DIR: "$CI_PROJECT_DIR/.cache/uv/"
+
+cache:
+  paths:
+    - .cache/uv/
+    - .venv/
+
+before_script:
+  - pip install --root-user-action=ignore uv==$UV_INSTALL_VERSION
+  - uv python install
+  - uv sync --locked
+
 stages:
 - test
+
 sast:
   stage: test
 include:
 - template: Security/SAST.gitlab-ci.yml
+
+pytest:
+  stage: test
+  script:
+    - uv run pytest
+    - uv run pre-commit --all-files
