Add bandit security check back

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -29,3 +29,10 @@ typeCheckingMode = "off"
 
 [tool.pytest.ini_options]
 addopts = "--ignore=templates/"
+
+[tool.bandit]
+# Configuration for bandit security checking tool
+exclude_dirs = [
+    "templates/",
+    "**/test*.py"
+]
