--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -22,6 +22,14 @@ repos:
   rev: v3.17.0
   hooks:
   - id: pyupgrade
+- repo: https://github.com/PyCQA/bandit
+  rev: "1.7.5"
+  hooks:
+    - id: bandit
+      args:
+        - "--quiet"
+        - "--configfile=pyproject.toml"
+      additional_dependencies: [ "bandit[toml]" ]
 - repo: https://github.com/astral-sh/ruff-pre-commit
   # Ruff version. Keep this in sync with the venv installed version
   rev: v0.6.2
