WIP passes tests and fails to solve part2

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,7 +5,7 @@ description = "Advent of Code solutions"
 readme = "README.md"
 requires-python = ">=3.12"
 dependencies = [
-    "ruff",
+    "ruff==0.14.7",
     "ruff-lsp",
     "pyupgrade",
     "pre-commit",
