--- a/ruff.toml
+++ b/ruff.toml
@@ -1,4 +1,4 @@
-target-version = "py310"
+target-version = "py312"
 # Exclude a variety of commonly ignored directories.
 extend-exclude = [
     ".bzr",
@@ -60,103 +60,7 @@ allow-dict-calls-with-keyword-arguments = true
 # Ignore specific rules in specific files
 "__init__.py" = ["F403", "F401", "D"]
 "src/test/*" = ["S101"]
-"src/reeder/reeder/settings/*" = ["F403", "F405"]
 
 [lint]
-select = ["ALL"]
-ignore = [
-    "S101", # Allow assert in the tests
-
-    # Ignore modules
-    "PTH", # flake8-use-pathlib
-    "ERA", # commented out code
-    "ANN", # flake8 annotations
-    "FBT", # flake8 boolean trap
-    "EM",  # flake8-errmsg
-    "BLE", # allow broad exceptions, catch Exception
-    "TD",  # todo tags
-    "FIX", # fixme tags
-    "RET",
-    "ISC001",
-
-    "D",
-
-    # rules we should look at NOT ignoring in the future
-    "ARG001",
-    "ARG002",
-    "ARG004",
-    "ARG005",
-    "B904",  # use raise-from
-    "C411",
-    "DJ001",  # null allowed in Django string field
-    "DJ012",
-    "DTZ005",
-    "E721",
-    "G003",
-    "INT001",
-    "N802",
-    "PERF401",
-    "PERF402",
-    "PLR0912",
-    "PLR2004", # magic constants
-    "PLR5501",
-    "PLW2901",
-    "RSE102",
-    "RUF001",
-    "RUF015",
-    "S110",
-    "S112",
-    "S308",
-    "SIM",
-    "TID252",
-    "TRY002",
-    "TRY201",
-    "TRY203",
-    "TRY401",
-    # "UP",
-
-    # Ignore individual rules
-    "D406",
-    "D409",
-    "D416",
-    "C416",   # unnecessary-comprehension
-    "C419",   # uunnecessary-comprehension-any-all
-    "COM812",
-    "D105",   # Allow magic methods to not have docstring
-    "D106",   # Allow Meta class to not have docstring
-    "D200",   # Allow 1 line docstrings on multi lines
-    "D203",
-    "D212",
-    "D419",   # empty-docstring
-    "DJ007",  # allow using __all__ for fields
-    "DJ008",  # ignore missing __str__ in django model
-    "E401",   # multiple-imports
-    "E501",   # line-too-long
-    "E731",
-    "F541",
-    "G004",   # f-strings in logging messages
-    "N806",   # lowercase variable - want to allow app.model() assigned to uppercase model name
-    "W605",
-    "PGH004", # blanket-noqa
-    "RUF012", # mutable class attributes should be typing.ClassVar
-    "SLF001", # Private member accessed
-    "T201",   # print statement
-    "TRY003", # long messages in exceptions
-    "TRY300", # return inside the exception
-    "TRY301", # raise exception to inner function
-    "TRY400", # use loggin.exception instead of error
-
-    #pylint rules
-    "PLC0205", # single-string-used-for-slots
-    "PLC0414", # useless-import-alias
-    "PLC0415", # import-outside-toplevel
-    "PLR0913", # too-many-arguments
-    "PLR0915", # too-many-statements
-    "PIE790",  # unnecessary-pass
-]
-
-[lint.mccabe]
-max-complexity = 12
-
-[lint.pylint]
-max-branches = 15
+select = ["E4", "E7", "E9", "F"]
+ignore = []
