--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -3,7 +3,6 @@ variables:
   PYTHON_VERSION: "3.12"
   UV_CACHE_DIR: .uv-cache
   UV_LINK_MODE: copy
-  UV_VERSION: "0.9.17"
 
 cache:
   - key:
@@ -16,7 +15,7 @@ stages:
   - test
 
 pytest:
-  image: ghcr.io/astral-sh/uv:$UV_VERSION-python$PYTHON_VERSION-$BASE_LAYER
+  image: ghcr.io/astral-sh/uv:python$PYTHON_VERSION-$BASE_LAYER
   stage: test
   script:
     - uv run pytest
