--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -22,6 +22,15 @@
     "PATH": "/home/vscode/.venv/bin:${containerEnv:PATH}"
   },
   "features": {
+    // "ghcr.io/devcontainers/features/docker-in-docker:2": {},
+    // "ghcr.io/devcontainers/features/aws-cli:1": {},
+    // "ghcr.io/devcontainers/features/azure-cli:1": {},
+    // "ghcr.io/devcontainers/features/terraform:1": {},
+    // "ghcr.io/devcontainers/features/kubectl-helm-minikube:1": {"version: "latest", "helm": "latest"}
+    "ghcr.io/va-h/devcontainers-features/difftastic:1": {
+      "version": "latest"
+    },
+    "ghcr.io/jsburckhardt/devcontainer-features/just:1": {},
     "ghcr.io/devcontainers/features/sshd:1": {
       "version": "latest"
     }
